fixed logo city toggle overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@ body {
 
 div#new-controls {
 	position: absolute;
+	width: 80%;
     top: 8px;
     left: 50px;
     z-index: 100;
@@ -76,6 +77,7 @@ div#new-controls {
 @media (max-width: 785px) {
 	div#new-controls { 
 		left: 5px;
+		width: 100%;
 	}
 }
 
